feature: added basic rol system to access some critical endPoints